FIX: migrate org.hibernate.jpa.QueryHints.SPEC_HINT_TIMEOUT (#554)
* FIX: migrate org.hibernate.jpa.QueryHints.SPEC_HINT_TIMEOUT to org.hibernate.jpa.AvailableHints.HINT_SPEC_QUERY_TIMEOUT (removes warning in log)

* autoincrement project version

---------

Co-authored-by: I.Chupryna <ievgen.chupryna@xmedigital.com>
Co-authored-by: GitHub Action <action@github.com>